cmake_minimum_required(VERSION 3.12)
project(Basics C)

set(CMAKE_C_STANDARD 11)

add_executable(1_1 1_1.c)
add_executable(1_2 1_2.c)
add_executable(2_1 2_1.c)
add_executable(3_1 3_1.c)
add_executable(3_2 3_2.c)
add_executable(4_1 4_1.c)
add_executable(5_1 5_1.c)
add_executable(5_2 5_2.c)
add_executable(5_3 5_3.c)
add_executable(6_1 6_1.c)
add_executable(7_1 7_1.c)
add_executable(7_2 7_2.c)
add_executable(9_1 9_1.c)
add_executable(9_2 9_2.c)
add_executable(9_3 9_3.c)
add_executable(9_4 9_4.c)
add_executable(10_1 10_1.c 10_2.c)
add_executable(11_1 11_1.c)
add_executable(11_2 11_2.c)
add_executable(12_1 12_1.c)
add_executable(12_2 12_2.c)
add_executable(13_1 13_1.c)
add_executable(14_1 14_1.c)
add_executable(15_1 15_1.c)
add_executable(15_2 15_2.c)
add_executable(16_1 16_1.c)
add_executable(16_2 16_2.c)
add_executable(17_1 17_1.c)
add_executable(18_1 18_1.c)
add_executable(shuzuzhizhen 数组指针.c)
add_executable(zhizhenshuzu 指针数组.c)

target_link_libraries(9_1 m)
