cmake_minimum_required(VERSION 3.12)
project(Basics C)

set(CMAKE_C_STANDARD 11)

add_executable(1_1 1步入C的世界/1_1.c)
add_executable(1_2 1步入C的世界/1_2.c)
add_executable(2_1 2常量与变量/2_1.c)
add_executable(3_1 3数据类型/3_1.c)
add_executable(3_2 3数据类型/3_2.c)
add_executable(4_1 4运算符和表达式/4_1.c)
add_executable(5_1 5程序控制结构与语句/5_1.c)
add_executable(5_2 5程序控制结构与语句/5_2.c)
add_executable(5_3 5程序控制结构与语句/5_3.c)
add_executable(6_1 6输入和输出/6_1.c)
add_executable(7_1 7数组与字符串/7_1.c)
add_executable(7_2 7数组与字符串/7_2.c)
add_executable(9_1 9函数/9_1.c)
add_executable(9_2 9函数/9_2.c)
add_executable(9_3 9函数/9_3.c)
add_executable(9_4 9函数/9_4.c)
add_executable(10_1 10函数中的变量/10_1.c 10函数中的变量/10_2.c)
add_executable(11_1 11指针/11_1.c)
add_executable(11_2 11指针/11_2.c)
add_executable(12_1 12指针进阶/12_1.c)
add_executable(12_2 12指针进阶/12_2.c)
add_executable(13_1 13文件/13_1.c)
add_executable(14_1 14编译与预处理指令/14_1.c)
add_executable(15_1 15库函数/15_1.c)
add_executable(15_2 15库函数/15_2.c)
add_executable(16_1 16位运算/16_1.c)
add_executable(16_2 16位运算/16_2.c)
add_executable(17_1 17结构体和联合体/17_1.c)
add_executable(18_1 18数据结构/18_1.c)
add_executable(shuzuzhizhen 数组指针.c)
add_executable(zhizhenshuzu 指针数组.c)

target_link_libraries(9_1 m)
